...
        presenter.viewDidLoad()
    }

    private func setupUI() {
        imageView.layer.cornerRadius = 20
        
        counterLabel.accessibilityIdentifier = "CounterLabel"
        questionLabel.accessibilityIdentifier = "QuestionLabel"
        
        activityIndicator.hidesWhenStopped = true
        
        let ysMediumFont = UIFont(name: "YS Display Medium", size: 20.0) ?? .systemFont(ofSize: 20.0)
        textLabel.font = ysMediumFont
...
